# instagram-webview

./: README.md  instagram.desktop  main.cpp  meson.build  org.sulincix.instagram.json
debian/: changelog  control  copyright  rules
